fix(layout/title_bar): badges not collapsing

--- a/apps/client/src/widgets/note_title.css
+++ b/apps/client/src/widgets/note_title.css
@@ -47,7 +47,7 @@ body.experimental-feature-new-layout {
             }
 
             .note-title-widget:focus-within + .note-badges,
-            .breadcrumb-badge .text {
+            .ext-badge .text {
                 display: none;
             }
         }
